--- a/app/src/main/res/layout/activity_main_hall.xml
+++ b/app/src/main/res/layout/activity_main_hall.xml
@@ -6,4 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".mainHall">
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="119dp"
+        android:layout_height="77dp"
+        android:layout_marginTop="203dp"
+        android:layout_marginEnd="206dp"
+        android:layout_marginRight="206dp"
+        android:text="Naween Dilshan"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
