--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,8 +11,7 @@
     <color name="colorWhite">#FFFFFF</color>
 
     <color name="colorPurple">#4a148c</color>
-
-
+    <color name="gold">#DD9830</color>
 
 
 </resources>
