--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_blue_light"
+    android:background="@drawable/backgroudd"
     tools:context=".MainActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
         android:layout_width="0dp"
         android:layout_height="110dp"
-        android:background="@android:color/holo_red_light"
+        android:background="@color/gold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -94,7 +94,7 @@
         android:layout_marginLeft="76dp"
         android:layout_marginTop="20dp"
         android:text="Teacher"
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView20" />
@@ -107,7 +107,7 @@
         android:layout_marginLeft="96dp"
         android:layout_marginTop="20dp"
         android:text="Student "
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/textView13"
         app:layout_constraintTop_toBottomOf="@+id/imageView21" />
@@ -120,7 +120,7 @@
         android:layout_marginLeft="84dp"
         android:layout_marginTop="20dp"
         android:text="Shedule"
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView22" />
@@ -146,7 +146,7 @@
         android:layout_marginLeft="104dp"
         android:layout_marginTop="20dp"
         android:text="Hall"
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/textView15"
         app:layout_constraintTop_toBottomOf="@+id/imageView24" />
@@ -157,7 +157,7 @@
         android:layout_height="36dp"
         android:layout_marginTop="20dp"
         android:text="Salary"
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.593"
