--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
 
     <color name="colorPurple">#4a148c</color>
     <color name="gold">#DD9830</color>
+    <color name="homeC">#010618</color>
 
 
 </resources>
