--- a/app/src/main/res/layout/activity_hall_add.xml
+++ b/app/src/main/res/layout/activity_hall_add.xml
@@ -26,6 +26,7 @@
             android:text="@string/dashboard_title"
             android:textColor="@color/colorWhite"
             android:textSize="30sp"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -48,6 +49,7 @@
         android:layout_height="38dp"
         android:text="Hall Name"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.088"
@@ -74,6 +76,7 @@
         android:layout_height="34dp"
         android:text="Hall Capacity"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.091"
@@ -124,6 +127,7 @@
         android:layout_height="38dp"
         android:text="Hall Manager"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.092"
@@ -150,6 +154,7 @@
         android:layout_height="38dp"
         android:text="Teachers Names"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.088"
