--- a/app/src/main/res/layout/activity_hall_view_tdata.xml
+++ b/app/src/main/res/layout/activity_hall_view_tdata.xml
@@ -4,8 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/b4"
-    tools:context=".Hall_View_Hdata">
+    tools:context=".Hall_view_Tdata">
+
+    <TextView
+        android:id="@+id/textView29"
+        android:layout_width="293dp"
+        android:layout_height="42dp"
+        android:text="Available Teachers "
+        android:textColor="@color/homeC"
+        android:textSize="34sp"
+        android:textStyle="bold|italic"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.142" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
@@ -30,18 +44,16 @@
 
         <TextView
             android:id="@+id/textView26"
-            android:layout_width="161dp"
-            android:layout_height="32dp"
-            android:text="Hall Details"
+            android:layout_width="252dp"
+            android:layout_height="35dp"
+            android:text="Teachers Details"
             android:textColor="#FDFCFC"
             android:textSize="30sp"
-            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/imageView19"
-            app:layout_constraintHorizontal_bias="0.329"
+            app:layout_constraintHorizontal_bias="0.493"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.482" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/imageView3"
@@ -56,34 +68,4 @@
             app:srcCompat="@drawable/backarrow" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <TextView
-        android:id="@+id/textView22"
-        android:layout_width="174dp"
-        android:layout_height="46dp"
-        android:text="Hall Details"
-        android:textColor="@color/homeC"
-        android:textSize="34sp"
-        android:textStyle="bold|italic"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.142" />
-
-    <TextView
-        android:id="@+id/textView27"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Number of Halls :"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.13"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.964" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
