--- a/app/src/main/res/layout/activity_view_schedule.xml
+++ b/app/src/main/res/layout/activity_view_schedule.xml
@@ -2,11 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/text"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:background="@drawable/gradient_background"
-    tools:context=".ClassIntroActivity">
+    tools:context=".view_schedule">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout2"
@@ -14,7 +13,6 @@
         android:layout_height="80dp"
         android:background="@color/gold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
@@ -24,7 +22,7 @@
             android:layout_marginTop="24dp"
             android:layout_marginEnd="36dp"
             android:layout_marginRight="36dp"
-            android:text="Schedule Mangement"
+            android:text="Schedule Management"
             android:textColor="@color/colorWhite"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -34,6 +32,8 @@
             android:id="@+id/imageView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginTop="16dp"
             app:layout_constraintEnd_toStartOf="@+id/textView21"
             app:layout_constraintHorizontal_bias="0.28"
@@ -43,44 +43,48 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <TextView
+        android:id="@+id/logo"
+        android:layout_width="341dp"
+        android:layout_height="72dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="16dp"
+        android:text="Schedules"
+        android:textColor="@color/black"
+        android:textSize="34sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.657"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.127" />
+
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="358dp"
-        android:layout_height="119dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginRight="24dp"
-        android:gravity="center"
-        android:inputType="textMultiLine"
-        android:text="You can manage classes from this feature.You should provide teachers name to view relevent records"
-        android:textAlignment="center"
-
+        android:id="@+id/textView18"
+        android:layout_width="306dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginLeft="44dp"
+        android:layout_marginTop="24dp"
+        android:text="T001        history      Monday       2        2pm"
         android:textColor="@color/black"
-        android:textSize="22sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
-
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="152dp"
-        android:layout_height="61dp"
-        android:layout_marginTop="40dp"
-        android:text="@string/rpbtn_intro"
-        app:backgroundTint="?attr/colorPrimaryVariant"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/logo" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="442dp"
-        android:layout_height="282dp"
-        app:layout_constraintEnd_toEndOf="parent"
+    <TextView
+        android:id="@+id/textView19"
+        android:layout_width="318dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginLeft="44dp"
+        android:layout_marginTop="8dp"
+        android:text="T002        Physics     Sunday       2.5     10am"
+        android:textColor="@color/black"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
-        app:srcCompat="@drawable/scheduleintro" />
+        app:layout_constraintTop_toBottomOf="@+id/textView18" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
