--- a/app/src/main/res/layout/activity_hall_home.xml
+++ b/app/src/main/res/layout/activity_hall_home.xml
@@ -31,6 +31,7 @@
         android:layout_width="201dp"
         android:layout_height="58dp"
         android:text="Add Hall"
+        app:backgroundTint="@color/homeC"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,6 +43,7 @@
         android:layout_width="201dp"
         android:layout_height="69dp"
         android:text="View Hall Details"
+        app:backgroundTint="@color/homeC"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,6 +55,7 @@
         android:layout_width="201dp"
         android:layout_height="69dp"
         android:text="Available Teacher"
+        app:backgroundTint="@color/homeC"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
