--- a/app/src/main/res/layout/activity_view_and_delete_student.xml
+++ b/app/src/main/res/layout/activity_view_and_delete_student.xml
@@ -4,19 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/wp4"
     tools:context=".viewAndDeleteStudent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout2"
+        android:id="@+id/stu_view_Layout"
         android:layout_width="413dp"
         android:layout_height="72dp"
-        android:background="@color/gold"
+        android:background="@color/design_default_color_error"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/imageView3"
+            android:id="@+id/stu_view_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
@@ -27,7 +28,7 @@
             app:srcCompat="@drawable/backarrow" />
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/stu_view_title"
             android:layout_width="220dp"
             android:layout_height="46dp"
             android:layout_marginStart="55dp"
@@ -35,13 +36,13 @@
             android:text="@string/dashboard_title"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView3"
+            app:layout_constraintStart_toEndOf="@+id/stu_view_back"
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
-        android:id="@+id/textView12"
+        android:id="@+id/stu_view_topic"
         android:layout_width="377dp"
         android:layout_height="55dp"
         android:layout_marginStart="16dp"
@@ -53,10 +54,10 @@
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />
+        app:layout_constraintTop_toBottomOf="@+id/stu_view_Layout" />
 
     <TextView
-        android:id="@+id/textView18"
+        android:id="@+id/stu_view_search_name"
         android:layout_width="191dp"
         android:layout_height="53dp"
         android:layout_marginStart="16dp"
@@ -64,9 +65,10 @@
         android:layout_marginTop="20dp"
         android:text="@string/c_stu_search"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView12" />
+        app:layout_constraintTop_toBottomOf="@+id/stu_view_topic" />
 
     <SearchView
+        android:id="@+id/stu_view_search_view"
         android:layout_width="409dp"
         android:layout_height="100dp"
         android:layout_marginTop="32dp"
@@ -74,6 +76,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView18" />
+        app:layout_constraintTop_toBottomOf="@+id/stu_view_search_name" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
