--- a/app/src/main/res/layout/activity_incomecal.xml
+++ b/app/src/main/res/layout/activity_incomecal.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorWhite"
+    android:background="@drawable/back1"
     tools:context=".incomecal">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -175,10 +175,11 @@
 
     <ImageView
         android:id="@+id/imageView5"
-        android:layout_width="440dp"
-        android:layout_height="291dp"
+        android:layout_width="321dp"
+        android:layout_height="209dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.577"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
         app:srcCompat="@drawable/salaryintro" />
